<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.github.scholiarw.hfg</groupId>
  <artifactId>hfg-parent</artifactId>
  <version>0.1.3</version>
  <packaging>pom</packaging>
  <name>HFG :: Parent</name>

  <modules>
    <module>hfg-common-contract</module>
    <module>hfg-storage-api</module>
    <module>hfg-storage-hdfs</module>
    <module>hfg-policy-engine</module>
    <module>hfg-traffic-control</module>
    <module>hfg-transfer-core</module>
    <module>hfg-protocol-ftp</module>
    <module>hfg-protocol-sftp</module>
    <module>hfg-gateway-control-client</module>
    <module>hfg-gateway-app</module>
    <module>hfg-manager-domain</module>
    <module>hfg-manager-infrastructure</module>
    <module>hfg-manager-api</module>
  </modules>

  <properties>
    <java.version>17</java.version>
    <maven.compiler.release>${java.version}</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <spring-boot.version>3.5.6</spring-boot.version>
    <hadoop.version>3.4.2</hadoop.version>
    <ftpserver.version>1.2.1</ftpserver.version>
    <sshd.version>2.16.0</sshd.version>
    <grpc.version>1.75.0</grpc.version>
    <bouncycastle.version>1.78.1</bouncycastle.version>
    <protobuf.version>3.25.8</protobuf.version>
    <junit.version>5.13.4</junit.version>
    <testcontainers.version>1.21.3</testcontainers.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${junit.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>testcontainers-bom</artifactId>
        <version>${testcontainers.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency><groupId>com.google.errorprone</groupId><artifactId>error_prone_annotations</artifactId><version>2.30.0</version></dependency>
      <dependency><groupId>org.bouncycastle</groupId><artifactId>bcpkix-jdk18on</artifactId><version>${bouncycastle.version}</version></dependency>
      <dependency><groupId>org.checkerframework</groupId><artifactId>checker-qual</artifactId><version>3.49.3</version></dependency>
      <dependency>
        <groupId>io.github.scholiarw.hfg</groupId>
        <artifactId>hfg-common-contract</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.scholiarw.hfg</groupId>
        <artifactId>hfg-storage-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.scholiarw.hfg</groupId>
        <artifactId>hfg-policy-engine</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.scholiarw.hfg</groupId>
        <artifactId>hfg-traffic-control</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.scholiarw.hfg</groupId>
        <artifactId>hfg-transfer-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.scholiarw.hfg</groupId>
        <artifactId>hfg-manager-domain</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.scholiarw.hfg</groupId>
        <artifactId>hfg-manager-infrastructure</artifactId>
        <version>${project.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.14.1</version>
          <configuration>
            <release>${java.version}</release>
            <parameters>true</parameters>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.4</version>
          <configuration>
            <useModulePath>false</useModulePath>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>3.6.2</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce</id>
            <goals><goal>enforce</goal></goals>
            <configuration>
              <rules>
                <requireJavaVersion><version>[17,18)</version></requireJavaVersion>
                <requireMavenVersion><version>[3.9,)</version></requireMavenVersion>
                <dependencyConvergence/>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin><groupId>org.cyclonedx</groupId><artifactId>cyclonedx-maven-plugin</artifactId><version>2.9.1</version><executions><execution><phase>package</phase><goals><goal>makeAggregateBom</goal></goals></execution></executions><configuration><outputFormat>json</outputFormat><schemaVersion>1.6</schemaVersion><includeBomSerialNumber>true</includeBomSerialNumber></configuration></plugin>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>2.46.1</version>
        <configuration>
          <java>
            <googleJavaFormat>
              <version>1.24.0</version>
            </googleJavaFormat>
            <formatAnnotations/>
          </java>
        </configuration>
        <executions>
          <execution>
            <id>format-check</id>
            <phase>validate</phase>
            <goals><goal>check</goal></goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
